--- a/untitled.html
+++ b/untitled.html
@@ -1,1 +1,1 @@
-<div>I am going to <b>write</b> in rich text <i>mode</i>&nbsp;</div>
+<div></div><div>I am going to <b>write</b> in rich text <i>mode</i>&nbsp;</div>
