--- a/untitled.html
+++ b/untitled.html
@@ -1,1 +1,1 @@
-<h1 id="auto-label-section-552458" class="ltx_title_section">Introduction</h1><div>I am going to <b>write</b> in rich text <i>mode</i>&nbsp;</div>
+<h1 class="ltx_title_section">Introduction</h1><div>I am going to <b>write</b> in rich text <i>mode</i>&nbsp;<cite class="ltx_cite raw v1">\cite{Zhao_2004}</cite></div>
